--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
 		"@nestjs/common": "^6.3.2",
 		"@nestjs/core": "^6.3.2",
 		"debug": "^4.1.1",
+		"firebase-admin": "^8.4.0",
+		"moment": "^2.24.0",
 		"puppeteer": "^1.18.0",
 		"reflect-metadata": "^0.1.13",
 		"rxjs": "^6.5.2",
