--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
 	"author": "Michael Penrod <therealnerdybeast@gmail.com>",
 	"license": "MIT",
 	"dependencies": {
+		"@hapi/joi": "^15.1.1",
 		"@nestjs/common": "^6.3.2",
 		"@nestjs/core": "^6.3.2",
 		"debug": "^4.1.1",
-		"firebase-admin": "^8.4.0",
+		"firebase": "^6.5.0",
 		"moment": "^2.24.0",
 		"puppeteer": "^1.18.0",
 		"reflect-metadata": "^0.1.13",
@@ -24,6 +25,7 @@
 	"devDependencies": {
 		"@nestjs/testing": "^6.3.2",
 		"@types/debug": "^4.1.4",
+		"@types/hapi__joi": "^15.0.4",
 		"@types/jest": "^24.0.15",
 		"@types/node": "^12.0.10",
 		"@types/puppeteer": "^1.12.4",
