--- a/package.json
+++ b/package.json
@@ -11,29 +11,28 @@
 	"author": "Michael Penrod <therealnerdybeast@gmail.com>",
 	"license": "MIT",
 	"dependencies": {
-		"@hapi/joi": "^15.1.1",
-		"@nestjs/common": "^6.3.2",
-		"@nestjs/core": "^6.3.2",
-		"debug": "^4.1.1",
-		"firebase": "^6.6.0",
-		"moment": "^2.24.0",
-		"puppeteer": "^1.18.0",
+		"@nestjs/common": "^7.4.4",
+		"@nestjs/core": "^7.4.4",
+		"debug": "^4.2.0",
+		"firebase": "^7.21.0",
+		"joi": "^17.2.1",
+		"moment": "^2.29.0",
+		"puppeteer": "^5.3.1",
 		"reflect-metadata": "^0.1.13",
-		"rxjs": "^6.5.2",
-		"tslib": "^1.10.0"
+		"rxjs": "^6.6.3",
+		"tslib": "^2.0.1"
 	},
 	"devDependencies": {
-		"@nestjs/testing": "^6.3.2",
-		"@types/debug": "^4.1.4",
-		"@types/hapi__joi": "^15.0.4",
-		"@types/jest": "^24.0.15",
-		"@types/node": "^12.0.10",
-		"@types/puppeteer": "^1.12.4",
-		"jest": "^24.8.0",
-		"ts-jest": "^24.0.2",
-		"ts-node": "^8.3.0",
-		"tslint": "^5.18.0",
-		"typescript": "^3.5.2"
+		"@nestjs/testing": "^7.4.4",
+		"@types/debug": "^4.1.5",
+		"@types/jest": "^26.0.14",
+		"@types/node": "^14.11.2",
+		"@types/puppeteer": "^3.0.2",
+		"jest": "^26.4.2",
+		"ts-jest": "^26.4.0",
+		"ts-node": "^9.0.0",
+		"tslint": "^6.1.3",
+		"typescript": "^4.0.3"
 	},
 	"jest": {
 		"preset": "ts-jest",
