--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
 		"puppeteer": "^5.3.1",
 		"reflect-metadata": "^0.1.13",
 		"rxjs": "^6.6.3",
-		"tslib": "^2.0.1"
+		"tslib": "^2.0.1",
+		"ts-node": "^9.0.0"
 	},
 	"devDependencies": {
 		"@nestjs/testing": "^7.4.4",
@@ -30,7 +31,6 @@
 		"@types/puppeteer": "^3.0.2",
 		"jest": "^26.4.2",
 		"ts-jest": "^26.4.0",
-		"ts-node": "^9.0.0",
 		"tslint": "^6.1.3",
 		"typescript": "^4.0.3"
 	},
