--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
 		"@nestjs/common": "^7.4.4",
 		"@nestjs/core": "^7.4.4",
 		"debug": "^4.2.0",
-		"firebase": "^7.21.0",
+		"firebase": "^7.22.0",
 		"joi": "^17.2.1",
 		"moment": "^2.29.0",
 		"puppeteer": "^5.3.1",
 		"reflect-metadata": "^0.1.13",
 		"rxjs": "^6.6.3",
-		"tslib": "^2.0.1",
-		"ts-node": "^9.0.0"
+		"ts-node": "^9.0.0",
+		"tslib": "^2.0.1"
 	},
 	"devDependencies": {
 		"@nestjs/testing": "^7.4.4",
@@ -30,7 +30,7 @@
 		"@types/node": "^14.11.2",
 		"@types/puppeteer": "^3.0.2",
 		"jest": "^26.4.2",
-		"ts-jest": "^26.4.0",
+		"ts-jest": "^26.4.1",
 		"tslint": "^6.1.3",
 		"typescript": "^4.0.3"
 	},
