--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
 		"rxjs": "^6.6.3",
 		"ts-jest": "^26.4.1",
 		"ts-node": "^9.0.0",
-		"tslib": "^2.0.1"
+		"tslib": "^2.0.1",
+		"typescript": "^4.0.3"
 	},
 	"devDependencies": {
 		"@nestjs/testing": "^7.4.4",
@@ -31,8 +32,7 @@
 		"@types/node": "^14.11.2",
 		"@types/puppeteer": "^3.0.2",
 		"jest": "^26.4.2",
-		"tslint": "^6.1.3",
-		"typescript": "^4.0.3"
+		"tslint": "^6.1.3"
 	},
 	"jest": {
 		"preset": "ts-jest",
