--- a/package.json
+++ b/package.json
@@ -24,9 +24,7 @@
 		"ts-jest": "^26.4.1",
 		"ts-node": "^9.0.0",
 		"tslib": "^2.0.1",
-		"typescript": "^4.0.3"
-	},
-	"devDependencies": {
+		"typescript": "^4.0.3",
 		"@nestjs/testing": "^7.4.4",
 		"@types/debug": "^4.1.5",
 		"@types/jest": "^26.0.14",
@@ -35,6 +33,7 @@
 		"jest": "^26.4.2",
 		"tslint": "^6.1.3"
 	},
+	"devDependencies": {},
 	"jest": {
 		"preset": "ts-jest",
 		"testEnvironment": "node",
